# slayer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUG-reserved-keyword-identifiers.md  CLAUDE.md  CONTRIBUTING.md  CUBE_IMPORT_SPEC.md  Makefile  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties  zensical.toml
.claude/skills/: slayer-models.md  slayer-overview.md  slayer-query.md
.github/workflows/: ci.yml  integration-clickhouse.yml  integration-mysql.yml  integration-sqlserver.yml  notify-docs.yml  pg-facade-e2e.yml
docs/: api_gaps.md  database-support.md  development.md  getting-started.md  index.md  requirements.txt
docs/architecture/: binding.md  cross-model-aggregates.md  engine-orchestration.md  errors-and-warnings.md  index.md  parsing.md  planning.md  scopes-and-bundle.md  slack-normalization.md  sql-generation.md  stage-planning.md  typed-keys.md
docs/concepts/: formulas.md  ingestion.md  learnings.md  memories.md  models.md  queries.md  query-cache.md  references.md  row-level-security.md  schema-drift.md  search.md  terminology.md
docs/configuration/: datasources.md  storage.md
docs/cube/: cube_import.md
docs/dbt/: dbt_import.md  slayer_vs_dbt.md
docs/examples/: ingest.py  jaffle_shop_duckdb.py  jaffle_shop_ingest.ipynb  schema-drift.md
docs/getting-started/: cli.md  flight-sql.md  index.md  mcp.md  python.md  rest-api.md
docs/interfaces/: cli.md  flight-sql.md  mcp.md  pg-facade.md  python-client.md  rest-api.md
docs/osi/: osi_import.md
docs/reference/: cli.md  mcp.md  python-client.md  rest-api.md
examples/: seed.py  verify_common.py
examples/bigquery/: README.md  start.sh  verify.py
examples/clickhouse/: README.md  start.sh  verify.py
examples/embedded/: README.md  run.py  verify.py
examples/mysql/: README.md  start.sh  verify.py
examples/postgres/: README.md  start.sh
examples/snowflake/: README.md  verify.py
examples/sqlserver/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  start.sh  verify.py
slayer/: __init__.py  async_utils.py  cli.py  ingest_report.py
slayer/api/: server.py
slayer/client/: slayer_client.py
slayer/core/: __init__.py  enums.py  errors.py  format.py  formula.py  keys.py  models.py  named_query_ops.py  policy.py  query.py  recommend.py  refs.py  scope.py  warnings.py
slayer/cube/: __init__.py  converter.py  extends.py  models.py  parser.py  refs.py  report.py
slayer/dbt/: converter.py  entities.py  filters.py  manifest.py  models.py  parser.py  sql_resolver.py
slayer/demo/: __init__.py  jaffle_shop.py
slayer/embeddings/: __init__.py  client.py  models.py  ranker.py  service.py
slayer/engine/: agg_registry.py  binding.py  cache.py  column_dependency.py  column_expansion.py  column_filter_paths.py  cross_model_planner.py  enriched.py  enrichment.py  ingestion.py  introspect_utils.py  join_graph.py  measure_expansion.py  normalization.py  path_resolution.py  planned.py  planning.py  profiling.py  query_engine.py  response_meta.py  schema_drift.py  source_bundle.py  stage_ordering.py  stage_planner.py  syntax.py  timing.py  variables.py
slayer/facade/: catalog.py  catalog_sql.py  info_schema.py  probe_queries.py  rows.py  translator.py
slayer/flight/: _capture_stub.py  auth.py  catalog.py  cli.py  handlers.py  info_schema.py  probe_queries.py  server.py  translator.py  types.py
slayer/help/: __init__.py
slayer/inspect/: __init__.py  collection_render.py  model_render.py  service.py
slayer/learnings/: __init__.py  models.py  resolver.py  service.py
slayer/mcp/: server.py
slayer/memories/: __init__.py  help_seed.py  models.py  ranker.py  resolver.py  service.py
slayer/osi/: __init__.py  converter.py  expression.py  models.py  parser.py  source.py
slayer/pg_facade/: __init__.py  auth.py  connection.py  identity.py  pg_catalog.py  probes.py  protocol.py  server.py  types.py
slayer/search/: __init__.py  cypher_naive.py  graph.py  index.py  render.py  retriever.py  rrf.py  service.py
slayer/sql/: client.py  engine_factory.py  generator.py  reserved_keywords.py  session_policy.py  sql_expr.py  sql_predicate.py  sqlite_dialect.py  sqlite_introspect.py  sqlite_udfs.py  stage_wrapper.py
slayer/storage/: base.py  join_sync.py  migrations.py  sidecar_embedding_store.py  sqlite_storage.py  type_refinement.py  v2_datasource_migration.py  v2_memory_migration.py  v2_migration.py  v4_migration.py  v5_migration.py  v6_migration.py  yaml_storage.py
specs/: DEV-1357-memories.md
tests/: _engine_helpers.py  conftest.py  parity_oracle.py  search_helpers.py  test_agg_registry.py  test_agg_render_spec.py  test_agg_render_spec_shim.py  test_aggregation_gating.py  test_api_server.py  test_async_engine_disposal.py  test_binding.py  test_bm25_retriever.py  test_boundexpr_unification.py  test_canonical_id_helpers.py  test_cascade_strip_on_delete.py  test_cli.py  test_cli_import_osi.py  test_cli_memory_string_ids.py  test_cli_search_text_output.py  test_client.py  test_client_policy.py  test_column_dependency.py  test_column_expansion_sync.py  test_count_distinct_approx_generation.py  test_cross_model_derived_columns.py  test_cross_model_planner.py  test_cross_model_planner_wiring.py  test_cross_model_rename_dev1448.py  test_cube_boundaries.py  test_cube_cli.py  test_cube_converter.py  test_cube_extends.py  test_cube_parser.py  test_cube_refs.py  test_cube_report.py  test_cube_smoke.py  test_cube_views.py  test_cypher_naive.py  test_datasource_postgres_schema.py  test_datasource_snowflake.py  (+192 more)
tests/dialects/: conftest.py  test__alias_mangle.py  test_base.py  test_bigquery.py  test_byte_equivalence.py  test_clickhouse.py  test_count_distinct_approx.py  test_default_tier2.py  test_duckdb.py  test_generator_delegation.py  test_generator_dispatch.py  test_multi_dialect_generation.py  test_mysql.py  test_postgres.py  test_registry.py  test_snowflake.py  test_sqlite.py  test_sqlite_json_extract.py  test_sqlite_udfs.py  test_tsql.py
tests/facade/: test_catalog.py  test_catalog_flatten_filter.py  test_catalog_grouped_by_schema.py  test_catalog_joins.py  test_catalog_sql.py  (+5 more)
(+167 files in other folders)
