[tool.poetry]
name = "motley-slayer"
version = "0.2.0rc1"
description = "A lightweight, agent-first semantic layer for AI agents"
authors = ["MotleyAI"]
license = "MIT"
readme = "README.md"
packages = [{include = "slayer"}]
keywords = ["semantic-layer", "sql", "ai", "mcp", "data", "analytics", "bi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.urls]
Repository = "https://github.com/MotleyAI/slayer"
Documentation = "https://motley-slayer.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.11"
sqlglot = {version = ">=20.0", extras = ["c"]}
sqlalchemy = ">=2.0"
pydantic = ">=2.0"
python-dateutil = ">=2.8"
pyyaml = ">=6.0"
fastapi = ">=0.100"
uvicorn = ">=0.20"
httpx = {version = ">=0.24", optional = true}
pandas = {version = ">=2.0", optional = true}
mcp = {version = ">=1.0", optional = true}
mkdocs-material = {version = ">=9.0", optional = true}
psycopg2-binary = {version = ">=2.9", optional = true}
pymysql = {version = ">=1.0", optional = true}
clickhouse-sqlalchemy = {version = ">=0.3", optional = true}
duckdb = {version = ">=0.9", optional = true}
duckdb-engine = {version = ">=0.13", optional = true}
jafgen = {git = "https://github.com/rossbowen/jaffle-shop-generator.git", rev = "09557a1118b000071f8171aa97d54d5029bf0f0b", optional = true}

[tool.poetry.extras]
client = ["httpx", "pandas"]
mcp = ["mcp"]
postgres = ["psycopg2-binary"]
mysql = ["pymysql"]
clickhouse = ["clickhouse-sqlalchemy"]
duckdb = ["duckdb", "duckdb-engine"]
docs = ["mkdocs-material"]
examples = ["jafgen", "duckdb", "duckdb-engine"]
all = ["httpx", "pandas", "mcp", "psycopg2-binary", "pymysql", "clickhouse-sqlalchemy", "duckdb", "duckdb-engine", "jafgen"]

[tool.poetry.scripts]
slayer = "slayer.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = ">=5.0"
ruff = ">=0.4"
pytest-postgresql = "^8.0.0"
psycopg2-binary = "^2.9.11"
pytest-benchmark = "^5.2.3"
duckdb = ">=0.9"
duckdb-engine = ">=0.13"
nbclient = ">=0.10"
nbformat = ">=5.10"
ipykernel = ">=6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/perf --cov=slayer --cov-report=term-missing --cov-report=html"
markers = [
    "integration: marks tests as integration tests (require a real database)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
